# Muffin

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle  run-tests
gradle/wrapper/: gradle-wrapper.properties
include/Muffin/: Simple.hpp
src/: Simple.cpp  main.cpp
src/include/muffin/api/: Simple.hpp
src/include/muffin/objc/: RxCpp.h  RxCpp.mm
src/source/muffin/: Simple.cpp
test/: SimpleSpec.cpp
test/source/: SimpleSpec.cpp
